some itemstacking fixes and bar